update user api docs
